# mcp-grep

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  pytest.ini  smithery.yaml
.github/workflows/: python-app.yml  python-publish.yml
mcp_grep/: __init__.py  cli.py  server.py
tests/: __init__.py  conftest.py  test_features.py  test_server.py
tests/features/: client_prompts.feature  grep_info.feature  grep_tool.feature
tests/step_defs/: __init__.py  conftest.py  test_client_prompts_steps.py  test_grep_info_steps.py  test_grep_tool_steps.py
