[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-grep"
version = "0.1.0"
description = "Grep tool that uses Model Context Protocol"
readme = "README.md"
authors = [
    {name = "Eric Brodeur", email = "example@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
]

[project.scripts]
mcp-grep = "mcp_grep.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.setuptools]
packages = ["mcp_grep"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
